--- a/src/linux/drivers/misc/chaos/Kbuild
+++ b/src/linux/drivers/misc/chaos/Kbuild
@@ -1,3 +1,3 @@
 # SPDX-License-Identifier: GPL-2.0
-chaos-objs	:= chaos-pci.o chaos-fs.o
+chaos-objs	:= chaos-core.o chaos-dram.o chaos-fs.o chaos-mailbox.o chaos-pci.o
 obj-m		+= chaos.o
