chaos: separate sandbox to files

--- a/src/chaos/Makefile
+++ b/src/chaos/Makefile
@@ -1,4 +1,10 @@
-all: sandbox
+CXXFLAGS :=-std=c++17 -O2
+DEPS = $(wildcard *.h)
+OBJ = sandbox.o inferior.o crypto.o
 
-sandbox: sandbox.cpp
-	$(CXX) $^ -o $@ -std=c++17 -O3 -lcrypto
+all: sandbox
+sandbox: $(OBJ)
+	$(CXX) -o $@ $^ $(CXXFLAGS) -lcrypto # remove lcrypto if openssl is not required
+
+%.o: %.cpp $(DEPS)
+	$(CXX) -c -o $@ $< $(CXXFLAGS)
