chaos: suppress pointer arith warning

--- a/src/chaos/Makefile
+++ b/src/chaos/Makefile
@@ -1,10 +1,10 @@
-CXXFLAGS :=-std=c++17 -O2
+CXXFLAGS :=-std=c++17 -O2 -Wall -Wno-pointer-arith
 DEPS = $(wildcard *.h)
 OBJ = sandbox.o inferior.o crypto.o
 
 all: sandbox firmware
 sandbox: $(OBJ)
-	$(CXX) -o $@ $^ $(CXXFLAGS) -lcrypto # remove lcrypto if openssl is not required
+	$(CXX) -o $@ $^ $(CXXFLAGS) -lcrypto
 
 %.o: %.cpp $(DEPS)
 	$(CXX) -c -o $@ $< $(CXXFLAGS)
