chaos: fix make rule for cipher

--- a/src/chaos/Makefile
+++ b/src/chaos/Makefile
@@ -1,13 +1,13 @@
 CXXFLAGS :=-std=c++17 -O2 -Wall -Wno-pointer-arith
 DEPS = $(wildcard *.h)
-OBJ = sandbox.o inferior.o crypto.o
-CIPHER_DIR = cipher
-CIPHER_SRC = $(wildcard $(CIPHER_DIR)/*.cpp)
-CIPHER_OBJ = $(patsubst $(CIPHER_DIR)/%.cpp,$(CIPHER_DIR)/%.o,$(CIPHER_SRC))
+OBJ = sandbox.o inferior.o crypto.o cipher/cipher.o
 
 all: sandbox firmware
-sandbox: $(OBJ) $(CIPHER_OBJ)
+sandbox: $(OBJ)
 	$(CXX) -o $@ $^ $(CXXFLAGS) -lcrypto -lgmp
+
+cipher/cipher.o: .PHONY
+	$(MAKE) CXXFLAGS="$(CXXFLAGS)" -C cipher cipher.o
 
 %.o: %.cpp $(DEPS)
 	$(CXX) -c -o $@ $< $(CXXFLAGS)
