chaos: format rsa and rc4

--- a/src/chaos/cipher/Makefile
+++ b/src/chaos/cipher/Makefile
@@ -4,5 +4,5 @@ OBJ = $(patsubst %.cpp,%.o,$(SRC))
 cipher.o: $(OBJ)
 	$(LD) -r -o cipher.o $^
 
-%.o: %.cpp %.h ../check.h
+%.o: %.cpp %.h
 	$(CXX) -c -o $@ $< $(CXXFLAGS)
