solution: handle commands and rename go.sh to go

--- a/solution/Makefile
+++ b/solution/Makefile
@@ -1,7 +1,11 @@
 kernel: .PHONY
+	$(CC) kernel/exp.c -o kernel/go -static -I../src/linux/drivers/misc/chaos/
+	$(MAKE) SRC=kernel/handler.c _build_fw
+
+_build_fw: .PHONY
 	$(RM) -r firmware/
 	cp -r ../src/chaos/firmware .
-	cp kernel/handler.c firmware/
+	cp $(SRC) firmware/
 	$(MAKE) -C firmware/
 
 .PHONY:
