--- a/solution/Makefile
+++ b/solution/Makefile
@@ -1,3 +1,4 @@
+BUILD_DIR=build
 kernel: .PHONY
 	$(CC) kernel/exp.c -o kernel/go -static -I../src/linux/drivers/misc/chaos/
 	$(MAKE) SRC=kernel/handler.c _build_fw
@@ -5,13 +6,14 @@ kernel: .PHONY
 firmware: .PHONY
 	$(CC) firmware/exp.c -o firmware/go -static -I../src/linux/drivers/misc/chaos/
 	$(MAKE) SRC=firmware/handler.c _build_fw
-	firmware/sign.py sol_firmware/firmware.bin sol_firmware/firmware.bin.signed
 
 _build_fw: .PHONY
-	$(RM) -r sol_firmware/
-	cp -r ../src/chaos/firmware sol_firmware
-	$(RM) sol_firmware/*.{o,elf,bin,signed}
-	cp $(SRC) sol_firmware/
-	$(MAKE) -C sol_firmware/
+	$(RM) -r $(BUILD_DIR)
+	mkdir $(BUILD_DIR)
+	cp -r ../src/chaos/firmware/* $(BUILD_DIR)/
+	$(RM) $(BUILD_DIR)/*.{o,elf,bin,signed}
+	cp $(SRC) $(BUILD_DIR)/
+	$(MAKE) -C $(BUILD_DIR)/
+	firmware/sign.py $(BUILD_DIR)/firmware.bin $(BUILD_DIR)/firmware.bin.signed
 
 .PHONY:
