--- a/src/tests/Makefile
+++ b/src/tests/Makefile
@@ -1,4 +1,6 @@
+UAPI_HEADER_DIR = ../linux/drivers/misc/chaos
+UAPI_HEADER = $(UAPI_HEADER_DIR)/chaos.h
 all: test_ioctl
 
-%: %.c
-	$(CC) -static $^ -o $@ -I../linux/drivers/misc/chaos/
+%: %.c $(UAPI_HEADER)
+	$(CC) -static $< -o $@ -I$(UAPI_HEADER_DIR)
