test: use test_ioctl as the released self-test

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ modules.order
 /rootfs/init
 /rootfs/lib/firmware/chaos
 /rootfs/tests
+/rootfs/selftest
+/rootfs/home
 /release/*.gz
 /release/bzImage
 /release/flag_*
